[gd_scene load_steps=8 format=3 uid="uid://oqi81dd7r3ld"]

[ext_resource type="Script" uid="uid://bni5i4qfcr2nc" path="res://Scene/MiniGames/MiniGameManager.gd" id="1_86aw1"]
[ext_resource type="Theme" uid="uid://bi54ign8ggomc" path="res://Themes/Classic95/Classic95.tres" id="1_q8s3n"]
[ext_resource type="PackedScene" uid="uid://db20wj0egmtb8" path="res://Scene/MiniGames/FileGame/FileSorting.tscn" id="2_qewjl"]
[ext_resource type="PackedScene" uid="uid://lfukprmrjlv8" path="res://Scene/MiniGames/MoppingGame/CleaningWater.tscn" id="4_6rllm"]
[ext_resource type="PackedScene" uid="uid://cnuj6n5mjhgar" path="res://Scene/MiniGames/TypingGame/TypingReport.tscn" id="4_cxkil"]
[ext_resource type="PackedScene" uid="uid://c7q5p5rkgcc5d" path="res://Scene/MiniGames/PrinterGame/FixingPrinter.tscn" id="5_1ubcr"]
[ext_resource type="PackedScene" uid="uid://dnj0wfhs5cyv4" path="res://Scene/MiniGames/DodgeGame/DodgeGame.tscn" id="6_0fbg8"]

[node name="MiniGameManager" type="Node"]
script = ExtResource("1_86aw1")
minigame_scene_list = Array[PackedScene]([ExtResource("2_qewjl"), ExtResource("4_cxkil"), ExtResource("4_6rllm"), ExtResource("5_1ubcr"), ExtResource("6_0fbg8")])

[node name="MiniGameWindow" type="Window" parent="."]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(400, 300)
theme = ExtResource("1_q8s3n")

[node name="MiniGameHost" type="Control" parent="MiniGameWindow"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_q8s3n")
